# querygpt

./: .gitignore  Makefile  README.md  notebook.ipynb  pyproject.toml  requirements.txt  setup.py
cli/: cli.py
config/: config.py  config.yaml
core/: __init__.py  _database.py  agent.py  embeders.py  index.py  retreivers.py  sources.py  sql_generator.py  workflow.py
core/sql/: _internal_schema.sql  clickhouse.sql  oracle.sql
example_databases/clickhouse/: config.yaml  dockerfile
example_databases/pagila/: Dockerfile  config.yaml
querygpt/: __init__.py
querygpt/cli/: cli.py
querygpt/config/: config.py  config.yaml
querygpt/core/: __init__.py  _database.py  agent.py  embeders.py  index.py  logging.py  memory.py  orchestrator.py  query_enhacner.py  retreivers.py  sql_generator.py  trace.py  workflow.py
querygpt/core/prompts/: finder_agent.yaml  query_agent.yaml  query_agent_plan_first.yaml
querygpt/core/sql/: _internal_schema.sql  postgres.sql
querygpt/serving/: serving.py
querygpt/tools/: tools.py
serving/: serving.py
tools/: tools.py
