[project]
name = "querygpt"
version = "0.1.0"
description = ""
authors = [
    {name = "Yasalm",email = "yasir.masad1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (==0.115.9)",
    "numpy (>=2.1,<3.0)",
    "torch (>=2.3,<2.4)",
    "pydantic (>=2.11.4,<3.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "duckdb (>=1.2.2,<2.0.0)",
    "chromadb (>=1.0.9,<2.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "litellm (>=1.69.3,<2.0.0)",
    "smolagents (>=1.16.1,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "click (>=8.2.0,<9.0.0)",
    "loguru (>=0.7.2,<1.0.0)",
    "logru (>=0.1.0,<0.2.0)"
]

[project.scripts]
querygpt = "querygpt.cli.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.clickhouse.dependencies]
sqlalchemy = "^2.0.41"
clickhouse-sqlalchemy = "^0.3.2"


[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "^2.9.10"


[tool.poetry.group.qdrant.dependencies]
qdrant-client = "^1.14.2"


[tool.poetry.group.all.dependencies]
clickhouse-sqlalchemy = "^0.3.2"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
qdrant-client = "^1.14.2"

